# gpt2-recreation

./: README.md  pyproject.toml
gpt/: data.py  dataloader.py  model.py  tokenizer.py  train.py
