[project]
name = "gpt-james-recreation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "datasets>=3.2.0",
    "tiktoken>=0.8.0",
    "requests>=2.32.4",
    "ruff>=0.12.0",
    "matplotlib>=3.10.3",
    "pynvml>=12.0.0",
]
